# mini-command-line-interpreter

./: .gitignore  CMakeLists.txt  README.md
apps/: cli.cpp
include/: CommandFactory.h  Engine.h  Executor.h  Interpreter.h  Parser.h  Reader.h  Token.h  Tokenizer.h  Writer.h
include/Commands/: Command.h  CommandBatch.h  CommandDate.h  CommandEcho.h  CommandHead.h  CommandPrompt.h  CommandRm.h  CommandTime.h  CommandTouch.h  CommandTr.h  CommandTruncate.h  CommandWc.h
include/Util/: Errors.h
src/: CommandFactory.cpp  Engine.cpp  Executor.cpp  Interpreter.cpp  Parser.cpp  Reader.cpp  Token.cpp  Tokenizer.cpp  Writer.cpp
src/Commands/: Command.cpp  CommandBatch.cpp  CommandDate.cpp  CommandEcho.cpp  CommandHead.cpp  CommandPrompt.cpp  CommandRm.cpp  CommandTime.cpp  CommandTouch.cpp  CommandTr.cpp  CommandTruncate.cpp  CommandWc.cpp
src/Util/: Errors.cpp
